--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,7 +14,10 @@ spring:
     username: sa
     password:
     driver-class-name: org.h2.Driver
-
+#    swagger config
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
 
   jpa:
     hibernate:
