--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,7 +27,7 @@ spring:
       hibernate:
         format_sql: true
         default_batch_fetch_size: 500
-    open-in-view: false
+    open-in-view: true
 
   servlet:
     multipart:
